# Shamrock

./: .clang-tidy  .cmake-format.py  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  FileTestPr.txt  LICENSE.en  README.md  examples  tmp_debug_tangent.py
src/shamalgs/: CMakeLists.txt  serialize.hpp
src/shamalgs/algorithm/details/: DigitBinner.hpp  radixSortOnesweep.hpp
src/shamalgs/algorithm/tests/: sortTests.hpp
src/shamalgs/atomic/: DeviceCounter.hpp  DynamicIdGenerator.hpp
src/shamalgs/container/: CMakeLists.txt  ResizableUSMBuffer.cpp  ResizableUSMBuffer.hpp
src/shamalgs/details/: CMakeLists.txt  SerializeHelperMember.hpp
src/shamalgs/details/algorithm/: CMakeLists.txt  DigitBinner.hpp  algorithm.hpp  bitonicSort.hpp  radixSortOnesweep.hpp
src/shamalgs/details/algorithm/details/: radixSortOnesweep.hpp
src/shamalgs/details/memory/: avoidCopyMemory.hpp  bufferFlattening.hpp  fallbackMemory.hpp  memory.hpp
src/shamalgs/details/numeric/: CMakeLists.txt  exclusiveScanAtomic.hpp  exclusiveScanGPUGems39.hpp  numeric.cpp  numeric.hpp  numericFallback.hpp  scanDecoupledLookback.hpp  streamCompactExclScan.hpp
src/shamalgs/details/numeric/details/: streamCompactExclScan.cpp
src/shamalgs/details/random/: random.hpp
src/shamalgs/details/reduction/: fallbackReduction.hpp  groupReduction.hpp  reduction.cpp  reduction.hpp  sycl2020reduction.hpp
src/shamalgs/details/reduction/details/: groupReduction.cpp  sycl2020reduction.cpp
src/shamalgs/include/shamalgs/: algorithm.hpp  flatten.hpp  gpu_core_timeline.hpp  memory.hpp  numeric.hpp  random.hpp  reduction.hpp  serialize.hpp  shamalgs.hpp
src/shamalgs/include/shamalgs/collective/: RequestList.hpp  are_all_rank_true.hpp  distributedDataComm.hpp  exchanges.hpp  io.hpp  reduction.hpp  string_histogram.hpp
src/shamalgs/include/shamalgs/primitives/: append_subset_to.hpp  binary_range_search.hpp  compute_histogram.hpp  dot_sum.hpp  equals.hpp  flatten.hpp  gen_buffer_index.hpp  is_all_true.hpp  lower_bound.hpp  mock_value.hpp  mock_vector.hpp  reduction.hpp  scan_exclusive_sum_in_place.hpp  sort_by_keys.hpp  upper_bound.hpp
src/shamalgs/reduction/details/: groupReduction.cpp
src/shamalgs/src/: serialize.cpp
src/shamalgs/src/collective/: are_all_rank_true.cpp  sparseXchg.cpp  sparse_exchange.cpp  string_histogram.cpp
src/shamalgs/src/container/: BufferEventHandler.cpp  ResizableBuffer.cpp  ResizableUSMBuffer.cpp
src/shamalgs/src/details/algorithm/: algorithm.cpp
src/shamalgs/src/details/numeric/: numeric.cpp  numericFallback.cpp  streamCompactExclScan.cpp
src/shamalgs/src/details/random/: random.cpp
src/shamalgs/src/details/reduction/: fallbackReduction_usm.cpp  groupReduction_usm.cpp  reduction.cpp
src/shamalgs/src/primitives/: append_subset_to.cpp  dot_sum.cpp  gen_buffer_index.cpp  is_all_true.cpp  mock_value.cpp  reduction.cpp  scan_exclusive_sum_in_place.cpp  sort_by_keys.cpp
src/shambackends/: CMakeLists.txt  README.md  buffer.hpp  exemple.cpp  shambackends.hpp
src/shambackends/aliases/: basetypes.hpp  half.hpp  vec.hpp
src/shambackends/backends/: CMakeLists.txt
src/shambackends/backends/kokkos/: check_backend.hpp  kokkos.hpp
src/shambackends/backends/kokkos/aliases/: basetypes.hpp  half.hpp  vec.hpp
src/shambackends/backends/sycl/: CMakeLists.txt  buffer.hpp  check_backend.hpp  sycl.cpp  sycl.hpp
src/shambackends/backends/sycl/aliases/: basetypes.hpp  half.hpp  vec.hpp
src/shambackends/include/shambackends/: Buffer.hpp  BufferMirror.hpp  Device.hpp  DeviceBuffer.hpp  DeviceContext.hpp  DeviceQueue.hpp  DeviceScheduler.hpp  EventList.hpp  SyclMpiTypes.hpp  USMPtrHolder.hpp  distrib_kernel_call.hpp  gpu_core_timeline.hpp  group_op.hpp  intrinsics.hpp  kernel_call.hpp  math.hpp  queues.hpp  shambackends.hpp  sycl_utils.hpp  typeAliasFp16.hpp  usmbuffer.hpp
src/shambackends/include/shambackends/aliases/: basetypes.hpp  half.hpp  vec.hpp
src/shambackends/include/shambackends/benchmarks/: add_mul.hpp  fma_chains.hpp  saxpy.hpp
src/shambackends/include/shambackends/comm/: CommunicationBuffer.hpp
src/shambackends/include/shambackends/details/: BufferEventHandler.hpp  memoryHandle.hpp
src/shambackends/include/shambackends/intrisics/: base_select.hpp  get_device_clock.hpp  get_sm_id.hpp
src/shambackends/src/: Device.cpp  DeviceContext.cpp  DeviceQueue.cpp  DeviceScheduler.cpp  EventList.cpp  SyclMpiTypes.cpp  USMPtrHolder.cpp  usmbuffer.cpp
src/shambackends/src/comm/: CommunicationBuffer.cpp
src/shambackends/src/comm/details/: CommunicationBufferImpl.cpp
src/shambackends/src/details/: BufferEventHandler.cpp  memoryHandle.cpp
src/shambase/: CMakeLists.txt  Constants.hpp  SourceLocation.hpp  floats.hpp  integer_sycl.hpp  stacktrace.cpp  stacktrace.hpp  sycl.hpp  sycl_builtins.hpp  sycl_utils.hpp  sycl_vec_aliases.hpp  type_aliases.hpp
src/shambase/fmt_bindings/: fmt_base.hpp  fmt_defs.hpp
src/shambase/include/shambase/: Constants.hpp  DistributedData.hpp  SourceLocation.hpp  Timer.hpp  assert.hpp  call_lambda.hpp  endian.hpp  exception.hpp  exception_ctx.hpp  format.hpp  format_time.hpp  memory.hpp  narrowing.hpp  pre_main_call.hpp  print.hpp  ptr.hpp  stacktrace.hpp  string.hpp  term_colors.hpp  time.hpp  type_name_info.hpp  type_traits.hpp  unique_name_macro.hpp
src/shambase/include/shambase/profiling/: chrome.hpp  profiling.hpp
src/shambase/include/shambase/tracing/: chrome.hpp
src/shambase/src/: exception.cpp  format.cpp  print.cpp  stacktrace.cpp
src/shambase/src/profiling/: chrome.cpp  profiling.cpp
src/shambase/src/tracing/: chrome.cpp
src/shambase/sycl_utils/: sycl_utilities.hpp  vec_equals.hpp  vectorProperties.hpp
src/shammodels/gsph/: CMakeLists.txt  README.md
src/shammodels/gsph/src/: Model.cpp  Solver.cpp  SolverConfig.cpp  pyGSPHModel.cpp
src/shammodels/gsph/src/core/: PhysicsModeFactory.cpp
src/shammodels/gsph/src/modules/: BoundaryHandler.cpp  BuildTrees.cpp  ComputeCFL.cpp  ComputeGradients.cpp  ComputeOmega.cpp  GSPHGhostHandler.cpp  GhostCommunicator.cpp  (+5 more)
(+1425 files in other folders)
